Verified Dask on working system

--- a/workspace/01-introduction.ipynb
+++ b/workspace/01-introduction.ipynb
@@ -728,12 +728,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "624b7e3c-0f60-449c-8d8b-276ce36d867e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished sklearn-kmeans on 10 points in 0.0174 seconds\n",
+      "Finished sklearn-kmeans on 100 points in 0.0015 seconds\n",
+      "Finished sklearn-kmeans on 1000 points in 0.0032 seconds\n",
+      "Finished sklearn-kmeans on 10000 points in 0.0054 seconds\n",
+      "Finished sklearn-kmeans on 100000 points in 0.0278 seconds\n",
+      "Finished sklearn-kmeans on 1000000 points in 0.2434 seconds\n",
+      "Finished sklearn-kmeans on 10000000 points in 2.3979 seconds\n",
+      "Done\n",
+      "Finished sklearn-kmeans on 10 points in 5.2842 seconds\n",
+      "Finished sklearn-kmeans on 100 points in 0.0054 seconds\n",
+      "Finished sklearn-kmeans on 1000 points in 0.0048 seconds\n",
+      "Finished sklearn-kmeans on 10000 points in 0.0058 seconds\n",
+      "Finished sklearn-kmeans on 100000 points in 0.0163 seconds\n",
+      "Finished sklearn-kmeans on 1000000 points in 0.0981 seconds\n",
+      "Finished sklearn-kmeans on 10000000 points in 0.8853 seconds\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
-    "!python sklearn_kmeans.py\n",
+    "!export OMP_NUM_THREADS=16; python sklearn_kmeans.py\n",
     "\n",
     "# scikit-learn scripts can also be converted directly\n",
     "!python -m cuml.accel sklearn_kmeans.py"
@@ -791,9 +814,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ngc_pytorch_25.03-py3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ngc_pytorch_25.03-py3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
