--- a/workspace/02_advanced.ipynb
+++ b/workspace/02_advanced.ipynb
@@ -22,10 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fe81b694-3730-4e1e-8bfc-7d45232d9f87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating 1000000 points\n",
+      " - original  (FP64) -  0.11 sec - 30.52 MB\n",
+      " - multiproc (FP32) -  1.29 sec - 15.26 MB\n",
+      "Generating 10000000 points\n",
+      " - original  (FP64) -  1.10 sec - 305.18 MB\n",
+      " - multiproc (FP32) -  1.30 sec - 152.59 MB\n",
+      "Generating 100000000 points\n",
+      " - original  (FP64) - 10.93 sec - 3051.76 MB\n",
+      " - multiproc (FP32) -  2.49 sec - 1525.88 MB\n"
+     ]
+    }
+   ],
    "source": [
     "from extras import generate_data, mp_generate_data\n",
     "import numpy as np\n",
@@ -62,7 +78,7 @@
     "\n",
     "Now that we can generate data quickly, we can start exploring the limits of GPU-accelerated algorithms.\n",
     "\n",
-    "> This was developed on a T4 with 16GB of VRAM. Increase the data size if 400M points does not fail on your GPU."
+    "> This was developed on a L40S with 48GB of VRAM. Decrease to 400M data points if on a GPU with 16GB, or increase the data size if 800M points does not fail on your GPU."
    ]
   },
   {
@@ -76,7 +92,7 @@
      "output_type": "stream",
      "text": [
       "Generated 100000000 points (1525.879 MB)\n",
-      "  - cuml 5.7894 seconds\n",
+      "  - cuml 8.1858 seconds\n",
       "Generated 800000000 points (12207.031 MB)\n"
      ]
     },
@@ -158,9 +174,9 @@
      "output_type": "stream",
      "text": [
       "Generated 100000000 points (1525.879 MB)\n",
-      "  - cuml 6.2042 seconds\n",
+      "  - cuml 4.1142 seconds\n",
       "Generated 800000000 points (12207.031 MB)\n",
-      "  - cuml 67.8275 seconds\n",
+      "  - cuml 54.2164 seconds\n",
       "Done\n"
      ]
     }
@@ -211,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f49414f9-42d2-49fb-ae14-a13627f24015",
    "metadata": {},
    "outputs": [
@@ -219,38 +235,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated 100000000 points (1525.879 MB)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "double free or corruption (!prev)\n",
-      "double free or corruption (!prev)\n",
-      "2025-06-17 12:19:06,665 - distributed.scheduler - ERROR - broadcast to tcp://127.0.0.1:41839 failed: CommClosedError: in <TCP (closed) Scheduler Broadcast local=tcp://127.0.0.1:35086 remote=tcp://127.0.0.1:41839>: Stream is closed\n",
-      "2025-06-17 12:19:06,719 - distributed.scheduler - ERROR - broadcast to tcp://127.0.0.1:39269 failed: CommClosedError: in <TCP (closed) Scheduler Broadcast local=tcp://127.0.0.1:49242 remote=tcp://127.0.0.1:39269>: Stream is closed\n"
-     ]
-    },
-    {
-     "ename": "CommClosedError",
-     "evalue": "in <TCP (closed) Scheduler Broadcast local=tcp://127.0.0.1:35086 remote=tcp://127.0.0.1:41839>: Stream is closed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mCommClosedError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 35\u001b[39m\n\u001b[32m     32\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mGenerated \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mN\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m points (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata_mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m MB)\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     34\u001b[39m start_time = time()\n\u001b[32m---> \u001b[39m\u001b[32m35\u001b[39m assignments = \u001b[43mcuml_KMeans\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_clusters\u001b[49m\u001b[43m=\u001b[49m\u001b[43mk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_init\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mauto\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_iter\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit_predict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdask_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     36\u001b[39m assignments.compute()\n\u001b[32m     37\u001b[39m \u001b[38;5;66;03m#print(assignments.map_blocks(cp.asnumpy).compute()[:10])\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.12/dist-packages/cuml/dask/cluster/kmeans.py:202\u001b[39m, in \u001b[36mKMeans.fit_predict\u001b[39m\u001b[34m(self, X, sample_weight, delayed)\u001b[39m\n\u001b[32m    187\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mfit_predict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, sample_weight=\u001b[38;5;28;01mNone\u001b[39;00m, delayed=\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[32m    188\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    189\u001b[39m \u001b[33;03m    Compute cluster centers and predict cluster index for each sample.\u001b[39;00m\n\u001b[32m    190\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    200\u001b[39m \n\u001b[32m    201\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m202\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msample_weight\u001b[49m\u001b[43m=\u001b[49m\u001b[43msample_weight\u001b[49m\u001b[43m)\u001b[49m.predict(\n\u001b[32m    203\u001b[39m         X, sample_weight=sample_weight, delayed=delayed\n\u001b[32m    204\u001b[39m     )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.12/dist-packages/cuml/internals/memory_utils.py:87\u001b[39m, in \u001b[36mwith_cupy_rmm.<locals>.cupy_rmm_wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     85\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m GPU_ENABLED:\n\u001b[32m     86\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m cupy_using_allocator(rmm_cupy_allocator):\n\u001b[32m---> \u001b[39m\u001b[32m87\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     88\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m func(*args, **kwargs)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.12/dist-packages/cuml/dask/cluster/kmeans.py:159\u001b[39m, in \u001b[36mKMeans.fit\u001b[39m\u001b[34m(self, X, sample_weight)\u001b[39m\n\u001b[32m    157\u001b[39m \u001b[38;5;66;03m# This needs to happen on the scheduler\u001b[39;00m\n\u001b[32m    158\u001b[39m comms = Comms(comms_p2p=\u001b[38;5;28;01mFalse\u001b[39;00m, client=\u001b[38;5;28mself\u001b[39m.client)\n\u001b[32m--> \u001b[39m\u001b[32m159\u001b[39m \u001b[43mcomms\u001b[49m\u001b[43m.\u001b[49m\u001b[43minit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mworkers\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m.\u001b[49m\u001b[43mworkers\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    161\u001b[39m kmeans_fit = [\n\u001b[32m    162\u001b[39m     \u001b[38;5;28mself\u001b[39m.client.submit(\n\u001b[32m    163\u001b[39m         KMeans._func_fit,\n\u001b[32m   (...)\u001b[39m\u001b[32m    172\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m idx, wf \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(data.worker_to_parts.items())\n\u001b[32m    173\u001b[39m ]\n\u001b[32m    175\u001b[39m wait_and_raise_from_futures(kmeans_fit)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.12/dist-packages/raft_dask/common/comms.py:200\u001b[39m, in \u001b[36mComms.init\u001b[39m\u001b[34m(self, workers)\u001b[39m\n\u001b[32m    196\u001b[39m worker_info = {w: worker_info[w] \u001b[38;5;28;01mfor\u001b[39;00m w \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.worker_addresses}\n\u001b[32m    198\u001b[39m \u001b[38;5;28mself\u001b[39m.create_nccl_uniqueid()\n\u001b[32m--> \u001b[39m\u001b[32m200\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    201\u001b[39m \u001b[43m    \u001b[49m\u001b[43m_func_init_all\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    202\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43msessionId\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    203\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43muniqueId\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    204\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcomms_p2p\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    205\u001b[39m \u001b[43m    \u001b[49m\u001b[43mworker_info\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    206\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    207\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mstreams_per_handle\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    208\u001b[39m \u001b[43m    \u001b[49m\u001b[43mworkers\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mworker_addresses\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    209\u001b[39m \u001b[43m    \u001b[49m\u001b[43mwait\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    210\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    212\u001b[39m \u001b[38;5;28mself\u001b[39m.nccl_initialized = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    214\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.comms_p2p:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.12/dist-packages/distributed/client.py:3193\u001b[39m, in \u001b[36mClient.run\u001b[39m\u001b[34m(self, function, workers, wait, nanny, on_error, *args, **kwargs)\u001b[39m\n\u001b[32m   3110\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mrun\u001b[39m(\n\u001b[32m   3111\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m   3112\u001b[39m     function,\n\u001b[32m   (...)\u001b[39m\u001b[32m   3118\u001b[39m     **kwargs,\n\u001b[32m   3119\u001b[39m ):\n\u001b[32m   3120\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   3121\u001b[39m \u001b[33;03m    Run a function on all workers outside of task scheduling system\u001b[39;00m\n\u001b[32m   3122\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   3191\u001b[39m \u001b[33;03m    >>> c.run(print_state, wait=False)  # doctest: +SKIP\u001b[39;00m\n\u001b[32m   3192\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m3193\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43msync\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   3194\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_run\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3195\u001b[39m \u001b[43m        \u001b[49m\u001b[43mfunction\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3196\u001b[39m \u001b[43m        \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3197\u001b[39m \u001b[43m        \u001b[49m\u001b[43mworkers\u001b[49m\u001b[43m=\u001b[49m\u001b[43mworkers\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3198\u001b[39m \u001b[43m        \u001b[49m\u001b[43mwait\u001b[49m\u001b[43m=\u001b[49m\u001b[43mwait\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3199\u001b[39m \u001b[43m        \u001b[49m\u001b[43mnanny\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnanny\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3200\u001b[39m \u001b[43m        \u001b[49m\u001b[43mon_error\u001b[49m\u001b[43m=\u001b[49m\u001b[43mon_error\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3201\u001b[39m \u001b[43m        \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3202\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.12/dist-packages/distributed/utils.py:363\u001b[39m, in \u001b[36mSyncMethodMixin.sync\u001b[39m\u001b[34m(self, func, asynchronous, callback_timeout, *args, **kwargs)\u001b[39m\n\u001b[32m    361\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m future\n\u001b[32m    362\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m363\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43msync\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    364\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mloop\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcallback_timeout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcallback_timeout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\n\u001b[32m    365\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.12/dist-packages/distributed/utils.py:439\u001b[39m, in \u001b[36msync\u001b[39m\u001b[34m(loop, func, callback_timeout, *args, **kwargs)\u001b[39m\n\u001b[32m    436\u001b[39m         wait(\u001b[32m10\u001b[39m)\n\u001b[32m    438\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m error \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m439\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m error\n\u001b[32m    440\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    441\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.12/dist-packages/distributed/utils.py:413\u001b[39m, in \u001b[36msync.<locals>.f\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    411\u001b[39m         awaitable = wait_for(awaitable, timeout)\n\u001b[32m    412\u001b[39m     future = asyncio.ensure_future(awaitable)\n\u001b[32m--> \u001b[39m\u001b[32m413\u001b[39m     result = \u001b[38;5;28;01myield\u001b[39;00m future\n\u001b[32m    414\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m exception:\n\u001b[32m    415\u001b[39m     error = exception\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.12/dist-packages/tornado/gen.py:766\u001b[39m, in \u001b[36mRunner.run\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    764\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    765\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m766\u001b[39m         value = \u001b[43mfuture\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    767\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    768\u001b[39m         \u001b[38;5;66;03m# Save the exception for later. It's important that\u001b[39;00m\n\u001b[32m    769\u001b[39m         \u001b[38;5;66;03m# gen.throw() not be called inside this try/except block\u001b[39;00m\n\u001b[32m    770\u001b[39m         \u001b[38;5;66;03m# because that makes sys.exc_info behave unexpectedly.\u001b[39;00m\n\u001b[32m    771\u001b[39m         exc: Optional[\u001b[38;5;167;01mException\u001b[39;00m] = e\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.12/dist-packages/distributed/client.py:3098\u001b[39m, in \u001b[36mClient._run\u001b[39m\u001b[34m(self, function, nanny, workers, wait, on_error, *args, **kwargs)\u001b[39m\n\u001b[32m   3095\u001b[39m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m   3097\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m on_error == \u001b[33m\"\u001b[39m\u001b[33mraise\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m-> \u001b[39m\u001b[32m3098\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m exc\n\u001b[32m   3099\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m on_error == \u001b[33m\"\u001b[39m\u001b[33mreturn\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m   3100\u001b[39m     results[key] = exc\n",
-      "\u001b[31mCommClosedError\u001b[39m: in <TCP (closed) Scheduler Broadcast local=tcp://127.0.0.1:35086 remote=tcp://127.0.0.1:41839>: Stream is closed"
+      "Generated 100000000 points (1525.879 MB)\n",
+      "  - dask+cuml 5.7367 seconds\n",
+      "Generated 800000000 points (12207.031 MB)\n",
+      "  - dask+cuml 28.4065 seconds\n",
+      "Done\n",
+      "268435456\n",
+      "1442840576\n",
+      "131564544\n",
+      "1757159424\n"
      ]
     }
    ],
@@ -270,7 +263,7 @@
     "from cuml.dask.cluster import KMeans as cuml_KMeans\n",
     "\n",
     "# Create a local (single-node) cluster and used RMM managed memory (OOM otherwise)\n",
-    "cluster = LocalCUDACluster(rmm_managed_memory=True, rmm_pool_size='15GB')\n",
+    "cluster = LocalCUDACluster(rmm_managed_memory=True, rmm_pool_size='40GB')\n",
     "# Connect to the cluster\n",
     "client = Client(cluster)\n",
     "\n",
@@ -306,7 +299,7 @@
    "id": "91fe20e1-bda1-49f0-8af4-3a53c51244d5",
    "metadata": {},
    "source": [
-    "You'll notice that using Dask on two T4s (no NVLink) was actually slower for a 1.5GB dataset, but faster for the 6GB scale.\n",
+    "You'll notice that using Dask on two L40S GPUs (no NVLink) was actually slower for a 1.5GB dataset, but faster for the 12GB scale.\n",
     "Whenever an algorithm is scaled to multiple workers, there's overhead from communication that limits the speed.\n",
     "You saw this with `mp_generate_data` and now with Dask.\n",
     "\n",
@@ -346,9 +339,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ngc_pytorch_25.03-py3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ngc_pytorch_25.03-py3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
